--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 <br>
 <div align="center">
   <div class="input-group mb-3 col-6">
-    <input type="text" class="form-control" placeholder="Dato" #valor>
+    <input type="number" class="form-control" placeholder="Dato" #valor>
     <div class="input-group-append">
       <button class="btn btn-outline-secondary" type="button" (click)="agregarValores(valor)">Agregar</button>
     </div>
@@ -22,10 +22,11 @@
 </div>
 
 
-<table class="table">
+<table class="table" *ngIf="sumatoria!=0">
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
+      <th scope="col">Datos Ordenados</th>
       <th scope="col">Datos</th>
       <th scope="col">Frecuencia</th>
       <th scope="col">Frecuencia Acumulada</th>
@@ -39,6 +40,10 @@
       <td></td>
       <td></td>
       <td></td>
+    </tr>
+    <tr *ngIf="sumatoria!=0">
+      <td>Total</td>
+      <td>{{sumatoria}}</td>
     </tr>
   </tbody>
 </table>
