--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,37 +13,53 @@
 </nav>
 <br>
 <div align="center">
-  <div class="input-group mb-3 col-6">
-    <input type="number" class="form-control" placeholder="Dato" #valor>
-    <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button" (click)="agregarValores(valor)">Agregar</button>
+  <div class="row">
+    <div class="col-2" >
+      <ul class="list-group">
+        <li class="list-group-item active">Datos</li>
+        <li class="list-group-item" >
+          <div class="input-group">
+            <input type="number" class="form-control" placeholder="Numero" #valor>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" (click)="agregarValores(valor)">+</button>
+            </div>
+          </div>
+        </li>
+  
+        <li class="list-group-item" *ngFor="let item of valores">{{item}}</li>
+      </ul>
+    </div>
+    <div class="col-10">
+      <table class="table" *ngIf="sumatoria!=0">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Datos Ordenados</th>
+            <th scope="col">Datos</th>
+            <th scope="col">Frecuencia</th>
+            <th scope="col">Frecuencia Acumulada</th>
+            <th scope="col">Frecuencia Relativa</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of valores; index as i">
+            <th scope="row">{{i+1}}</th>
+            <td>{{item}}</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr *ngIf="sumatoria!=0">
+            <td>Total</td>
+            <td>{{sumatoria}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
+ 
 </div>
 
 
-<table class="table" *ngIf="sumatoria!=0">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Datos Ordenados</th>
-      <th scope="col">Datos</th>
-      <th scope="col">Frecuencia</th>
-      <th scope="col">Frecuencia Acumulada</th>
-      <th scope="col">Frecuencia Relativa</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let item of valores; index as i">
-      <th scope="row">{{i+1}}</th>
-      <td>{{item}}</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr *ngIf="sumatoria!=0">
-      <td>Total</td>
-      <td>{{sumatoria}}</td>
-    </tr>
-  </tbody>
-</table>
+
+
