--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,6 +56,27 @@
             <th>100%</th>
             <th>100%</th>
           </tr>
+          <tr class="static">
+            <th scope="row">Moda</th>
+            <th>{{moda}}</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr class="static">
+            <th scope="row">Media</th>
+            <th>{{media}}</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr class="static">
+            <th scope="row">Mediana</th>
+            <th>{{datomediana}}</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
         </tbody>
       </table>
     </div>
