--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,69 +12,72 @@
   </div>
 </nav>
 <br>
-<div align="center">
-  <div class="row">
-    <div class="col-2" >
-      <div class="input-group">
-        <input type="number" class="form-control" placeholder="Dato" #valor>
-        <div class="input-group-append">
-          <button class="btn btn-dark" type="button" (click)="agregarValores(valor)">+</button>
+<div class="margen">
+  <div align="center">
+    <div class="row">
+      <div class="col-2" >
+        <div class="input-group">
+          <input type="number" class="form-control" placeholder="Dato" #valor>
+          <div class="input-group-append">
+            <button class="btn btn-dark" type="button" (click)="agregarValores(valor)">+</button>
+          </div>
         </div>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let item of valoresSinOrden">{{item}}</li>
+        </ul>
       </div>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of valoresSinOrden">{{item}}</li>
-      </ul>
-    </div>
-    <div class="col-10" *ngIf="sumatoria!=0">
-      <table class="table table-bordered">
-        <thead class="thead-dark">
-          <tr class="static">
-            <th scope="col-2">Xi</th>
-            <th scope="col-2">fi</th>
-            <th scope="col-2">Fi</th>
-            <th scope="col-2">ni</th>
-            <th scope="col-2">Ni</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="static" *ngFor="let item of valoresSinDuplicados; index as i" >
-            <th scope="row">{{item}}</th>
-            <td>{{frecuencia[i]}}</td>
-            <td>{{frecuenciaAcumulada[i]}}</td>
-            <td>{{frecuenciaRelativa[i]}}%</td>
-            <td>{{frecuenciaRelativaAcumulada[i]}}%</td>
-    
-          </tr>
-          <tr class="static">
-            <th scope="row">Total</th>
-            <th>{{sumatoria}}</th>
-            <th>{{sumatoria}}</th>
-            <th>100%</th>
-            <th>100%</th>
-          </tr>
-        </tbody>
-
-
-      </table>
-      <br>
-<div align="left">
-  <tr class="static">
-    <th scope="row">Media: {{media}}</th>
-  </tr>
-  <tr class="static">
-    <th scope="row">Mediana: {{datomediana}}</th>
-  </tr>
-  <tr class="static">
-    <th scope="row" *ngIf="modamayor==1">No hay moda</th>
-    <th scope="row" *ngIf="modamayor!=1">Moda: {{moda}}</th>
-  </tr>
-</div>
-        
-
-    </div>
+      <div class="col-10" *ngIf="sumatoria!=0">
+        <table class="table table-bordered">
+          <thead class="thead-dark">
+            <tr class="static">
+              <th scope="col-2"> Xi</th>
+              <th scope="col-2">fi</th>
+              <th scope="col-2">Fi</th>
+              <th scope="col-2">ni</th>
+              <th scope="col-2">Ni</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="static" *ngFor="let item of valoresSinDuplicados; index as i" >
+              <th scope="row">{{item}}</th>
+              <td>{{frecuencia[i]}}</td>
+              <td>{{frecuenciaAcumulada[i]}}</td>
+              <td>{{frecuenciaRelativa[i]| number:'1.2-2'}}%</td>
+              <td>{{frecuenciaRelativaAcumulada[i]| number:'1.2-2'}}%</td>
+      
+            </tr>
+            <tr class="static">
+              <th scope="row">Total</th>
+              <th>{{sumatoria}}</th>
+              <th>{{sumatoria}}</th>
+              <th>100%</th>
+              <th>100%</th>
+            </tr>
+          </tbody>
+  
+  
+        </table>
+        <br>
+  <div align="left">
+    <tr class="static">
+      <th scope="row">Media: {{media| number:'1.2-2'}}</th>
+    </tr>
+    <tr class="static">
+      <th scope="row">Mediana: {{datomediana}}</th>
+    </tr>
+    <tr class="static">
+      <th scope="row" *ngIf="modamayor==1">No hay moda</th>
+      <th scope="row" *ngIf="modamayor!=1">Moda: {{moda}}</th>
+    </tr>
   </div>
- 
+          
+  
+      </div>
+    </div>
+   
+  </div>
 </div>
+
 
 
 
