--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Frecuencias Absolutas</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -15,7 +16,7 @@
 <div class="margen">
   <div align="center">
     <div class="row">
-      <div class="col-2" >
+      <div class="col-2">
         <div class="input-group">
           <input type="number" class="form-control" placeholder="Dato" #valor>
           <div class="input-group-append">
@@ -27,6 +28,10 @@
         </ul>
       </div>
       <div class="col-10" *ngIf="sumatoria!=0">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg">Ver Grafica de Pastel</button>
+          <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg2">Ver Grafica de Barras</button>
+        </div>
         <table class="table table-bordered">
           <thead class="thead-dark">
             <tr class="static">
@@ -38,13 +43,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="static" *ngFor="let item of valoresSinDuplicados; index as i" >
+            <tr class="static" *ngFor="let item of valoresSinDuplicados; index as i">
               <th scope="row">{{item}}</th>
               <td>{{frecuencia[i]}}</td>
               <td>{{frecuenciaAcumulada[i]}}</td>
               <td>{{frecuenciaRelativa[i]| number:'1.2-2'}}%</td>
               <td>{{frecuenciaRelativaAcumulada[i]| number:'1.2-2'}}%</td>
-      
+
             </tr>
             <tr class="static">
               <th scope="row">Total</th>
@@ -54,27 +59,83 @@
               <th>100%</th>
             </tr>
           </tbody>
-  
-  
+
+
         </table>
         <br>
-  <div align="left">
-    <tr class="static">
-      <th scope="row">Media: {{media| number:'1.2-2'}}</th>
-    </tr>
-    <tr class="static">
-      <th scope="row">Mediana: {{datomediana}}</th>
-    </tr>
-    <tr class="static">
-      <th scope="row" *ngIf="modamayor==1">No hay moda</th>
-      <th scope="row" *ngIf="modamayor!=1">Moda: {{moda}}</th>
-    </tr>
+        <div align="left">
+          <tr class="static">
+            <th scope="row">Media: {{media| number:'1.2-2'}}</th>
+          </tr>
+          <tr class="static">
+            <th scope="row">Mediana: {{datomediana}}</th>
+          </tr>
+          <tr class="static">
+            <th scope="row" *ngIf="modamayor==1">No hay moda</th>
+            <th scope="row" *ngIf="modamayor!=1">Moda: {{moda}}</th>
+          </tr>
+        </div>
+        
+
+        
+      </div>
+      
+    </div>
+
   </div>
-          
-  
+  <br><br>
+
+<!-- Large modal -->
+
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    
+    <div class="modal-content">
+      <div class="modal-header" align="center">
+        <h5 class="modal-title" id="exampleModalLabel" >Grafica de Pastel</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="chart">
+        <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+          [options]="pieChartOptions" [plugins]="pieChartPlugins" [colors]="pieChartColors" [legend]="pieChartLegend">
+        </canvas>
       </div>
     </div>
-   
+  </div>
+</div>
+
+    
+
+<div class="modal fade bd-example-modal-lg2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header" align="center">
+        <h5 class="modal-title" id="exampleModalLabel" >Grafica de Barras</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <button class="btn btn-primary col-12" (click)="randomize()" align="center">Cambiar Vista</button>
+
+
+        <div>
+          <div>
+            <div >
+              <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+                [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)"></canvas>
+            </div>
+          </div>
+    
+        <div>
+    
+        </div>
+        <div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -82,3 +143,4 @@
 
 
 
+</div>
