--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,70 @@
           <li class="list-group-item" *ngFor="let item of valoresSinOrden">{{item}}</li>
         </ul>
       </div>
-      <div class="col-10" *ngIf="sumatoria!=0">
+      <div class="col-10" ><!-- *ngIf="sumatoria>20" -->
+        <table class="table table-bordered" >
+          <thead class="thead-dark">
+            <tr class="static">
+              <th scope="col-2"> Clase</th>
+              <th scope="col-2" colspan="2">Intervalos de Clase</th>
+              <th scope="col-2">Marcas de Clase</th>
+              <th scope="col-2">f</th>
+              <th scope="col-2">Fa</th>
+              <th scope="col-2">ni</th>
+              <th scope="col-2">Ni</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="static" *ngFor="let item of intervaloInferior; index as i">
+              <th scope="row">{{i+1}}</th>
+              <th>{{intervaloInferior[i]| number:'1.2-2'}}</th>
+              <th>{{intervaloSuperior[i]| number:'1.2-2'}}</th>
+              <td>{{marcaDeClase[i]| number:'1.2-2'}}</td>
+              <td>{{frecuenciaIntervalos[i]}}</td>
+              <td></td>   
+              <td></td>
+              <td></td>
+        
+        
+            </tr>
+            <tr class="static">
+              <th scope="row">Total</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th>{{sumatoria}}</th>
+              <th>{{sumatoria}}</th>
+              <th>100%</th>
+              <th>100%</th>
+            </tr>
+            <div align="left">
+              <tr class="static">
+                <th scope="row">Media: {{media| number:'1.2-2'}}</th>
+              </tr>
+              <tr class="static">
+                <th scope="row">Mediana: {{datomediana}}</th>
+              </tr>
+              <tr class="static">
+                <th scope="row" *ngIf="modamayor==1">No hay moda</th>
+                <th scope="row" *ngIf="modamayor!=1">Moda: {{moda}}</th>
+              </tr>
+            </div>
+          </tbody>
+          <div align="left">
+            <tr class="static">
+              <th scope="row">Rango: {{rango}}</th>
+            </tr>
+            <tr class="static">
+              <th scope="row">Clase: {{clase| number:'1.2-2'}}</th>
+            </tr>
+            <tr class="static">
+              <th scope="row">Intervalo de clase: {{intervaloDeClase| number:'1.2-2'}}</th>
+            </tr>
+          </div>
+        
+        </table>
+      </div>
+      <div class="col-10" *ngIf="sumatoria<=20&&sumatoria!=0">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
           <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg">Ver Grafica de Pastel</button>
           <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg2">Ver Grafica de Barras</button>
@@ -140,7 +203,6 @@
 </div>
 
 
-
-
+<br>
 
 </div>
