--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,17 +27,17 @@
           <li class="list-group-item" *ngFor="let item of valoresSinOrden">{{item}}</li>
         </ul>
       </div>
-      <div class="col-10" *ngIf="sumatoria>20" ><!-- *ngIf="sumatoria>20" -->
+      <div class="col-10" ><!-- *ngIf="sumatoria>20" -->
         <table class="table table-bordered" >
           <thead class="thead-dark">
             <tr class="static">
               <th scope="col-2"> Clase</th>
               <th scope="col-2" colspan="2">Intervalos de Clase</th>
               <th scope="col-2">Marcas de Clase</th>
-              <th scope="col-2">f</th>
-              <th scope="col-2">Fa</th>
-              <th scope="col-2">ni</th>
-              <th scope="col-2">Ni</th>
+              <th scope="col-2">fi</th>
+              <th scope="col-2">Fi</th>
+              <th scope="col-2">fr</th>
+              <th scope="col-2">f%</th>
             </tr>
           </thead>
           <tbody>
@@ -48,8 +48,8 @@
               <td>{{marcaDeClase[i]| number:'1.2-2'}}</td>
               <td>{{frecuenciaIntervalos[i]}}</td>
               <td>{{frecuenciaInterAcumulada[i]}}</td>   
-              <td></td>
-              <td></td>
+              <td>{{frecuenciarelativaMayor20[i] | number:'1.2-2'}}</td>
+              <td>{{frecuenciaporcentualMayor20[i] | number:'1.2-2' }}%</td>
         
         
             </tr>
@@ -60,7 +60,7 @@
               <th></th>
               <th>{{sumatoria}}</th>
               <th>{{sumatoria}}</th>
-              <th>100%</th>
+              <th>1</th>
               <th>100%</th>
             </tr>
             <div align="left">
@@ -84,7 +84,7 @@
               <th scope="row">Clase: {{clase| number:'1.2-2'}}</th>
             </tr>
             <tr class="static">
-              <th scope="row">Intervalo de clase: {{intervaloDeClase| number:'1.2-2'}}</th>
+              <th scope="row">Intervalo de clase: {{amplitud| number:'1.2-2'}}</th>
             </tr>
           </div>
         
@@ -101,8 +101,8 @@
               <th scope="col-2"> Xi</th>
               <th scope="col-2">fi</th>
               <th scope="col-2">Fi</th>
-              <th scope="col-2">ni</th>
-              <th scope="col-2">Ni</th>
+              <th scope="col-2">fr</th>
+              <th scope="col-2">f%</th>
             </tr>
           </thead>
           <tbody>
@@ -110,7 +110,7 @@
               <th scope="row">{{item}}</th>
               <td>{{frecuencia[i]}}</td>
               <td>{{frecuenciaAcumulada[i]}}</td>
-              <td>{{frecuenciaRelativa[i]| number:'1.2-2'}}%</td>
+              <td>{{frecuenciaRelativa[i]| number:'1.2-2'}}</td>
               <td>{{frecuenciaRelativaAcumulada[i]| number:'1.2-2'}}%</td>
 
             </tr>
@@ -118,7 +118,7 @@
               <th scope="row">Total</th>
               <th>{{sumatoria}}</th>
               <th>{{sumatoria}}</th>
-              <th>100%</th>
+              <th>1</th>
               <th>100%</th>
             </tr>
           </tbody>
