--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           <li class="list-group-item" *ngFor="let item of valoresSinOrden">{{item}}</li>
         </ul>
       </div>
-      <div class="col-10" ><!-- *ngIf="sumatoria>20" -->
+      <div class="col-10" *ngIf="sumatoria>20"><!-- *ngIf="sumatoria>20" -->
         <table class="table table-bordered" >
           <thead class="thead-dark">
             <tr class="static">
@@ -64,6 +64,9 @@
               <th>100%</th>
             </tr>
             <div align="left">
+              <h6>
+                Medidas de tendencia central
+              </h6>
               <tr class="static">
                 <th scope="row">Media: {{media| number:'1.2-2'}}</th>
               </tr>
@@ -91,10 +94,6 @@
         </table>
       </div>
       <div class="col-10" *ngIf="sumatoria<=20&&sumatoria!=0">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg">Ver Grafica de Pastel</button>
-          <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg2">Ver Grafica de Barras</button>
-        </div>
         <table class="table table-bordered">
           <thead class="thead-dark">
             <tr class="static">
@@ -126,7 +125,14 @@
 
         </table>
         <br>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg">Ver Grafica de Pastel</button>
+          <button type="button" class="btn btn-secundary" data-toggle="modal" data-target=".bd-example-modal-lg2">Ver Grafica de Barras</button>
+        </div>
         <div align="left">
+          <h6>
+            Medidas de tendencia central
+          </h6>
           <tr class="static">
             <th scope="row">Media: {{media| number:'1.2-2'}}</th>
           </tr>
@@ -180,7 +186,6 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <button class="btn btn-primary col-12" (click)="randomize()" align="center">Cambiar Vista</button>
 
 
         <div>
@@ -198,6 +203,8 @@
         <div>
         </div>
       </div>
+      <button class="btn btn-primary col-12" (click)="randomize()" align="center">Cambiar Vista</button>
+
     </div>
   </div>
 </div>
