--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,11 @@
     margin: 50px;
     height: 30px;
 }
+footer {
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    color: white;
+}
