--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,13 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Frecuencias Absolutas</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">ESTADÍSTICA</a>
+    <form class="form-inline">
+      <button class="btn btn-outline-warning">Exportar</button>
+    </form>
   </div>
 </nav>
 <br>
+<!--
 <div class="margen">
   <div align="center">
     <div class="row">
@@ -27,7 +22,7 @@
           <li class="list-group-item" *ngFor="let item of valoresSinOrden">{{item}}</li>
         </ul>
       </div>
-      <div class="col-10" ><!-- *ngIf="sumatoria>20" -->
+      <div class="col-10" *ngIf="sumatoria > 20"><!-- *ngIf="sumatoria>20" 
         <table class="table table-bordered" >
           <thead class="thead-dark">
             <tr class="static">
@@ -148,7 +143,7 @@
   </div>
   <br><br>
 
-<!-- Large modal -->
+<!-- Large modal 
 
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
@@ -205,4 +200,12 @@
 
 <br>
 
-</div>
+</div>-->
+
+<app-data-table></app-data-table>
+
+<footer class="bg-dark">
+  <div class="container">
+    <p class="text-center mt-2">© Studios Copy-Paste. 2020</p>
+  </div>
+</footer>
