--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">ESTADÍSTICA</a>
+    <a class="navbar-brand" href="/">ESTADÍSTICA</a>
     <form class="form-inline">
-      <button class="btn btn-outline-warning">Exportar</button>
+      <button class="btn btn-outline-warning" (click)="exportAsXLSX()" [disabled]="fileExcel.length < 1">Exportar</button>
     </form>
   </div>
 </nav>
 <br>
 
-<app-data-table></app-data-table>
+<app-data-table [valoresSinOrden]="fileExcel"></app-data-table>
 
 <footer class="bg-dark">
   <div class="container">
