--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -170,9 +170,9 @@
             <th scope="row" class="bg-primary text-white">Quartil 3</th>
           </tr>
           <tr class="static text-center">
-            <td scope="row"></td>
-            <td scope="row"></td>
-            <td scope="row"></td>
+            <td scope="row">{{ Q1 | number:'1.2-2' }}</td>
+            <td scope="row">{{ Q2 | number:'1.2-2' }}</td>
+            <td scope="row">{{ Q3 | number:'1.2-2' }}</td>
           </tr>
         </table>
         
