--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -3,7 +3,8 @@
     <div class="col-md-3"></div>
     <div class="alert alert-success col-md-6 text-center" role="alert">
       Puedes Ingresar Valores Manualmente o subir un archivo de Excel<br>
-      <a class ="text-primary" href="" data-toggle="modal" data-target="#modalImagen">¿Qué debe contener el archivo Excel a importar?</a>
+      <a class="text-primary" href="" data-toggle="modal" data-target="#modalImagen">¿Qué debe contener el archivo Excel
+        a importar?</a>
     </div>
     <div class="col-md-3"></div>
   </div>
@@ -14,7 +15,7 @@
         <input type="number" class="form-control" placeholder="12" #valor>
         <div class="input-group-append">
           <button class="btn btn-outline-secondary" type="button" id="button-addon2"
-          (click)="agregarValores(valor)">Insertar</button>
+            (click)="agregarValores(valor)">Insertar</button>
         </div>
       </div>
     </div>
@@ -22,7 +23,7 @@
       <div class="input-group mb-3">
         <div class="custom-file">
           <input type="file" class="custom-file-input" id="inputGroupFile02" (change)="onFileChange($event)"
-          accept=".xlsx">
+            accept=".xlsx">
           <label class="custom-file-label" for="inputGroupFile02">Subir Archivo...</label>
         </div>
       </div>
@@ -77,7 +78,7 @@
               <td class="text-center">{{frecuenciaRelativaAcumulada[i]| number:'1.2-2'}}%</td>
             </tr>
             <tr class="static" class="text-center bg-secondary text-white">
-              <th scope="row" >Total</th>
+              <th scope="row">Total</th>
               <th>-</th>
               <th>{{sumatoria}}</th>
               <th>-</th>
@@ -140,25 +141,25 @@
           <tr>
             <td colspan="3">
               <div class="btn-group-vertical col-12">
-                <button type="button" class="btn btn-warning  col-12" data-toggle="modal" 
-                data-target=".bd-example-modal-lg">
+                <button type="button" class="btn btn-warning  col-12" data-toggle="modal"
+                  data-target=".bd-example-modal-lg">
                   Ver Grafica de Pastel
-              </button>
-              <button type="button" class="btn btn-secondary col-md" data-toggle="modal" 
-                data-target=".bd-example-modal-lg2">
+                </button>
+                <button type="button" class="btn btn-secondary col-md" data-toggle="modal"
+                  data-target=".bd-example-modal-lg2">
                   Ver Grafica de Barras
-              </button>
-              
-              <button type="button" class="btn btn-primary  col-md" data-toggle="modal" 
-              data-target=".bd-example-modal-lg3">
-              Ver Grafica de Puntos
-              </button>
+                </button>
+
+                <button type="button" class="btn btn-primary  col-md" data-toggle="modal"
+                  data-target=".bd-example-modal-lg3">
+                  Ver Grafica de Puntos
+                </button>
               </div>
-             
+
             </td>
-                      </tr>
+          </tr>
         </table>
-        <table align="left" class="table col-md-6 border" *ngIf="sumatoria >= 20">
+        <table align="left" class="table col-md-7 border" *ngIf="sumatoria >= 20">
           <tr class="static text-center">
             <th scope="row" class="bg-primary text-white"></th>
             <th scope="row" class="bg-primary text-white">Rango</th>
@@ -167,18 +168,18 @@
             <th scope="row" class="bg-primary text-white"></th>
           </tr>
           <tr class="static text-center">
-            <th scope="row" ></th>
+            <th scope="row"></th>
             <td scope="row">{{maximo}} - {{minimo}} =</td>
             <td scope="row">1 + 3.332 * log({{sumatoria}}) =</td>
             <td scope="row">{{rango}} / {{clase}} =</td>
-            <th scope="row" ></th>
+            <th scope="row"></th>
           </tr>
           <tr class="static text-center">
-            <th scope="row" ></th>
+            <th scope="row"></th>
             <td scope="row">{{rango}}</td>
             <td scope="row">{{clase}}</td>
             <td scope="row">{{amplitud| number:'1.2-2'}}</td>
-            <th scope="row" ></th>
+            <th scope="row"></th>
           </tr>
           <tr class="static text-center">
             <th scope="row" class="bg-primary text-white"></th>
@@ -188,12 +189,12 @@
             <th scope="row" class="bg-primary text-white"></th>
           </tr>
           <tr class="static text-center">
-            <th scope="row" ></th>
+            <th scope="row"></th>
             <td scope="row">{{media| number:'1.2-2'}}</td>
             <td scope="row"></td>
             <td scope="row" *ngIf="modaMayor==0">No hay Moda</td>
             <td scope="row" *ngIf="modaMayor>=1">{{moda}}</td>
-            <th scope="row" ></th>
+            <th scope="row"></th>
           </tr>
           <tr class="static text-center">
             <th scope="row" class="bg-primary text-white">Min</th>
@@ -210,35 +211,35 @@
             <td scope="row">{{ maximo}}</td>
           </tr>
           <tr>
-<td colspan="5">
-  <div class="btn-group-vertical col-12">
-    <button type="button" class="btn btn-warning  col-md" data-toggle="modal" 
-    data-target=".bd-example-modal-lg">
-      Ver Grafica de Pastel
-  </button>
-  <button type="button" class="btn btn-secondary  col-md" data-toggle="modal" 
-    data-target=".bd-example-modal-lg2">
-      Ver Grafica de Barras
-  </button>
-    <button type="button" class="btn btn-primary col-12" data-toggle="modal" 
-    data-target=".bd-example-modal-lg4">
-    Ver Grafica de Puntos
-    </button>
-  </div>
- 
-</td>
-          </tr>
-          
-        </table>
-        
+            <td colspan="5">
+              <div class="btn-group-vertical col-12">
+                <button type="button" class="btn btn-warning  col-md" data-toggle="modal"
+                  data-target=".bd-example-modal-lg">
+                  Ver Grafica de Pastel
+                </button>
+                <button type="button" class="btn btn-secondary  col-md" data-toggle="modal"
+                  data-target=".bd-example-modal-lg2">
+                  Ver Grafica de Barras
+                </button>
+                <button type="button" class="btn btn-primary col-12" data-toggle="modal"
+                  data-target=".bd-example-modal-lg4">
+                  Ver Grafica de Puntos
+                </button>
+              </div>
 
-        
+            </td>
+          </tr>
+
+        </table>
+
+
+
         <div class="col-md-3"></div>
       </div>
       <div class="row mb-5">
         <div class="col-md-2"></div>
 
-        
+
         <div class="col-md-2"></div>
       </div>
     </div>
@@ -247,12 +248,13 @@
 
 <!-- Large modal -->
 
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    
+
     <div class="modal-content">
       <div class="modal-header" align="center">
-        <h5 class="modal-title" id="exampleModalLabel" >Grafica de Pastel</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Grafica de Pastel</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -264,13 +266,14 @@
       </div>
     </div>
   </div>
-</div>    
+</div>
 
-<div class="modal fade bd-example-modal-lg2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header" align="center">
-        <h5 class="modal-title" id="exampleModalLabel" >Grafica de Barras</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Grafica de Barras</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -278,16 +281,16 @@
       <button class="btn btn-primary col-12" (click)="randomize()" align="center">Cambiar Vista</button>
 
 
+      <div>
         <div>
           <div>
-            <div >
-              <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
-                [legend]="barChartLegend" [chartType]="barChartType"></canvas>
-            </div>
+            <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+              [legend]="barChartLegend" [chartType]="barChartType"></canvas>
           </div>
-    
+        </div>
+
         <div>
-    
+
         </div>
         <div>
         </div>
@@ -296,20 +299,18 @@
   </div>
 </div>
 
-<div class="modal fade bd-example-modal-lg3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header" align="center">
-        <h5 class="modal-title" id="exampleModalLabel" >Diagrama de Puntos</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Diagrama de Puntos</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div style="display: block">
-        <canvas baseChart
-          [datasets]="scatterChartData"
-          [options]="scatterChartOptions"
-          [labels]="scatterChartLabels"
+        <canvas baseChart [datasets]="scatterChartData" [options]="scatterChartOptions" [labels]="scatterChartLabels"
           [chartType]="scatterChartType">
         </canvas>
       </div>
@@ -317,23 +318,21 @@
   </div>
 </div>
 
-<div class="modal fade bd-example-modal-lg4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header" align="center">
-        <h5 class="modal-title" id="exampleModalLabel" >Diagrama de Puntos</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Diagrama de Puntos</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-        <div style="display: block">
-          <canvas baseChart
-            [datasets]="scatterChartData2"
-            [options]="scatterChartOptions2"
-            [labels]="scatterChartLabels2"
-            [chartType]="scatterChartType2">
-          </canvas>
+      <div style="display: block">
+        <canvas baseChart [datasets]="scatterChartData2" [options]="scatterChartOptions2" [labels]="scatterChartLabels2"
+          [chartType]="scatterChartType2">
+        </canvas>
 
       </div>
     </div>
@@ -343,7 +342,8 @@
 
 </div>
 <!-- Modal -->
-<div class="modal fade" id="modalImagen" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="modalImagen" data-backdrop="static" data-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -357,8 +357,8 @@
       </div>
       <div class="modal-footer">
         <div class="col-md-2"></div>
-        <a type="button" class="btn btn-success col-md"
-        href="assets/file/plantilla-para-ingresar-datos.xlsx">Descargar Plantilla</a>
+        <a type="button" class="btn btn-success col-md" href="assets/file/plantilla-para-ingresar-datos.xlsx">Descargar
+          Plantilla</a>
         <div class="col-md-2"></div>
       </div>
     </div>
